tests/codegen/pass/029-closure-simple-global.hyg
let x = 2;
fun add(y: int): int = x + y;
assert(add(40) = 42)
