tests/codegen/fail/020-array-indexoutbound.hyg
let n = 6;
let arr: array {int} = array(n, 40 + 2);
assert(arrayElem(arr, 10) = 42)
